<resources>
    <string name="app_name">My Health</string>
    <string name="my">MY</string>
    <string name="health">HeaLTH</string>
    <string name="health_is_wealth">Health is Wealth</string>
    <string name="todo">TODO</string>
    <string name="my_health">My Health</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="started">Let\'s get started! Enter your mobile number</string>
    <string name="back_to_login"><u>Back to Login</u></string>
    <string name="sign_in">Have an account ? <b>Sign In</b></string>
    <string name="TP">I agree to the <b>Term &amp; Privacy</b></string>
    <string name="create_acc">…\nLet\'s\nCreate\nYour\nAccount</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_up">Sign UP</string>
    <string name="full_name">Full Name</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="create_an_account">Create an account</string>
    <string name="login">Login</string>
    <string name="login_password">Password</string>
    <string name="alway_s_ready">Alway\'s Ready To Serve You</string>
    <string name="heart_image">Heart Image</string>
    <string name="lock_image">Lock Image</string>
    <string name="forget">Forget</string>
    <string name="password_forget">Password?</string>
    <string name="instruction">Don\'t worries, we\'ll send you \n reset instructions</string>
    <string name="email">Email or Phone Number</string>
    <string name="reset_password">Reset Password</string>
    <string name="forget_pwd">forget_pwd</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="_6_digit_otp">6-digit OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="mohsen_jamali">Hi, Mohsen Jamali</string>
    <string name="how_are_you_today">How Are You Today?</string>
    <string name="searching">Searching...</string>
    <string name="top_doctors">Top Doctors</string>
    <string name="see_all">See all</string>
    <string name="qr_scanner">Qr scanner</string>
    <string name="qrcodescanner">QrcodeScanner</string>
    <string name="doctorprofile">DoctorProfile</string>
    <string name="bellicon">BellIcon</string>
    <string name="dynamicanimation">DynamicAnimation</string>
    <string name="home_menu">Home Menu</string>
    <string name="user_profile">User Profile</string>
    <string name="application_setting">Application Setting</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="whistlist">Whistlist</string>
    <string name="explorer">Explorer</string>
    <string name="ABc">TODO</string>
    <string name="Image">TODO</string>
    <string name="doctor_speciality">Doctor Speciality</string>
    <string name="bookmark">Bookmark</string>
    <string name="back_button">Back Button</string>
    <string name="title_activity_doctorside_dashboard">doctorside_dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>