<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".activity.ForgetActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        tools:ignore="ExtraText,UselessParent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/forget_pwd"
            app:srcCompat="@drawable/lockpic"
            tools:ignore="ImageContrastCheck"
            android:background="#FFFFFF"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="#1B5742"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_forget"
            android:textSize="50sp"
            android:textColor="#1B5742"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction"
            android:textAlignment="center"
            android:textColor="#1B5742"
            android:textSize="18sp" />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="20sp"
            android:layout_weight="1"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/reset"
                android:backgroundTint="#1B5742"
                android:clipToOutline="true"
                android:orientation="vertical"
                android:padding="24dp"
                tools:ignore="UnusedAttribute">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ResetEdittext"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/baseline_email_24"
                    android:drawablePadding="15dp"
                    android:hint="@string/email_or_phone"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColorHint="@color/white" />

                <Button
                    android:id="@+id/resetPasswordButton"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:backgroundTint="#067E6D"
                    android:text="@string/reset_password"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/back_to_login"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/lock_image"
                    android:background="@color/white"
                    android:src="@drawable/baseline_arrow_back_24"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>