<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#52AAED"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:text="@string/enter_otp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/otpEditText"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:gravity="center"
        android:hint="@string/_6_digit_otp"
        android:inputType="number"
        android:maxLength="6"
        android:textColorHint="#01101A"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/verifyOtpButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/verify_otp"
        android:layout_marginTop="20dp"/>

</LinearLayout>
