<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.SignupActivity2">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rectangular"
            android:backgroundTint="#1B5742"
            android:clipToOutline="true"
            android:orientation="vertical"
            tools:ignore="UnusedAttribute">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:lineSpacingExtra="-10dp"
                android:text="@string/create_acc"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="24dp">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/signup_"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="15dp"
            android:hint="@string/full_name"
            android:inputType="textPersonName|textCapWords"
            android:padding="8dp"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:boxStrokeColor="@color/black" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/signup_"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="15dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColorHint="@color/black"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/signup_"
            android:drawableStart="@drawable/baseline_phone_24"
            android:drawablePadding="8dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="@color/black"
            android:textSize="21sp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/signup_"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColorHint="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/retypePasswordEditText"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:background="@drawable/signup_"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="15dp"
            android:hint="@string/retype_password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColorHint="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TP"
            android:textColor="@color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="24dp"
        android:backgroundTint="#1B5742"
        android:text="@string/sign_up" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/black" />

</LinearLayout>